--- a/views/layout.haml
+++ b/views/layout.haml
@@ -49,6 +49,7 @@
 <div class="clear"></div>
 
 <div id="Footer">
+Problems? <a href="mailto:staterepresentatives@gmail.com">Send email feedback</a> <br />
 Copyright &copy; 2009 Daniel Jackoway |  All Rights Reserved.
 <br />
 Designed By <a href="http://www.christinachun.com/freestuff.php" title="Christina Chun">Christina Chun</a>  |  <a href="http://validator.w3.org/check?uri=referer">Valid XHTML</a></div>
