--- a/views/layout.haml
+++ b/views/layout.haml
@@ -54,5 +54,14 @@ Copyright &copy; 2009 Daniel Jackoway |  All Rights Reserved.
 <br />
 Designed By <a href="http://www.christinachun.com/freestuff.php" title="Christina Chun">Christina Chun</a>  |  <a href="http://validator.w3.org/check?uri=referer">Valid XHTML</a></div>
 </div>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-8961600-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 </body>
 </html>
