--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1" />
+<meta name="Description" content="Helping Delaware residents call their state senators in support of Delaware House Bill 5, a bill that would ban discrimination based on sexual orientation">
 <meta name="Description" content="A free open source web design by Christina Chun.  Free for anyone to use as long as credits are intact. " />
 <meta name="Keywords" content="open source web design, christina chun, christinachun.com, www.christinachun.com" />
 <meta name="Copyright" content="Christina Chun" />
