start working on the new copy

--- a/views/index.haml
+++ b/views/index.haml
@@ -5,20 +5,27 @@
     = @errors
 
 %p
-  %span.phonenum UPDATE:
-  A new bill, Senate Bill 121, that is virtually identical, was introduced to a different committee and has passed. Governor Markell is expected to sign it on July 2nd.
-  %a{:href => 'http://www.delawareliberal.net/2009/06/27/sb-121-signing-today/'} More Info
-
+  Delaware’s “Civil Union and Equality Act of 2011,” S.B. 30, would allow same-gender couples to have the rights and responsibilities on the state level that accrue to opposite-sex marriage. You can see the bill and its status at
+  %a{:href => "http://legis.delaware.gov/LIS/LIS146.nsf/vwLegislation/SB+30?Opendocument"} http://legis.delaware.gov/LIS/LIS146.nsf/vwLegislation/SB+30?Opendocument
 %p
-  Delaware House Bill 5 proposes to ban discrimination based on sexual orientation. It passed the state House of Representatives convincingly with a 26-14 margin. Currently, it is stuck in the Senate Executive Committee. 
+  The bill is now in the state Senate’s Administrative Services Committee. To continue its progress and ultimately be successful, it must, as the first step, be voted out of that Senate committee, and be allowed to the Senate floor for a vote.
 %p
-  Since the bill will probably not leave committee through regular means, state Senators need to sign a petition to bring it to the Senate floor.
+  Three of the members of the committee are sponsors of our Civil Unions bill, so please prioritize contacting the other three members of the committee who are not sponsors and who have not publicly declared their support for the bill:
+  %ul
+    %li
+      Senator
+      %a{:href => "mailto:Joseph.Booth@state.de.us"} Joseph.Booth@state.de.us
+      302-744-4117
+    %li
+      Senator
+      %a{:href => "mailto:Dave.Lawson@state.de.us"} Dave.Lawson@state.de.us
+      302-492-1511
+    %li
+      Senator
+      %a{:href => "mailto:Robert.Marshall@state.de.us"} Robert.Marshall@state.de.us
+      302-744-4168
 %p
-  This site will quickly and securely allow you to determine your state Senator and his or her phone number and give you a sample script to use when encouraging him or her to sign the petition. 
-
-%p
-  First, we must determine your state representatives. To do so, please enter your address below. We will not record your address. It will only be used to determine your state Senator.
-
+  In addition, both the State Senator and State Representative for your district need to hear from each registered voter in their district that supports the civil union bill. Please enter your address or 9-digit zip code below to determine who your State Senator and State Representative are.
 %form{:action => '/call', :method => :post}
   %p
     %label Address
