--- a/views/layout.haml
+++ b/views/layout.haml
@@ -7,7 +7,7 @@
 <meta name="Copyright" content="Christina Chun" />
 <meta name="Designed By" content="ChristinaChun.com" />
 <meta name="Language" content="English" />
-%title= @title || "Help Pass House Bill 5"
+%title= @title || "Help Delaware Get Civil Unions"
 
 <style type="text/css" title="layout" media="screen"> @import url("stylesheets/style.css"); </style>
 </head>
@@ -18,7 +18,7 @@
 <div id="Body">
 <div id="Navigation"><div id="SiteHeader"></div>
 <div id="PageHeaderPad">
-<div id="PageHeader"><div class="pad"><h1>Help Pass House Bill 5</h1></div>
+<div id="PageHeader"><div class="pad"><h1>Help Delaware Get Civil Unions</h1></div>
 </div>
 </div>
 </div>
