mostly support doing both RD and SD

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -10,6 +10,8 @@
 %title= @title || "Help Delaware Get Civil Unions"
 
 <style type="text/css" title="layout" media="screen"> @import url("stylesheets/style.css"); </style>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+<script type="text/javascript" src="/application.js"></script>
 </head>
 
 <body>
