--- a/views/call.haml
+++ b/views/call.haml
@@ -1,50 +1,52 @@
-%h1 Call Your Senator
+%h1 Call Your Senator and Representative
+
+%button.switch Switch to Calling Your Representative
 
 %p
-  A new bill with the same goals, Senate Bill 121, has been introduced. Please urge your Senator to do whatever they can to ensure that one of these passes. 
+  Now, please call your state
+  %span.sen
+    senator, Senator
+    = @person.senator_name
+  %span.rep
+    representative,
+    = "TODO rep name"
 
-%p
-  Now, please call your state senator, Senator
-  = precede @person.senator_name do
-    , to ask him/her to sign the petition to get
+  to ask him/her to support
   = BILL
-  out of committee.
 
 %p
-  Below is your senator's phone number, followed by a sample script to use when talking to him or her.
+  Below is your
+  %span.sen
+    senator's
+  %span.rep
+    representative's
+  phone number, followed by a sample script to use when talking to him or her.
 
 %p
   Call
-  %span.phonenum= @person.senator_phone
+  %span.phonenum.sen= @person.senator_phone
+  %span.phonenum.rep TODO representative phone number
 
 %h2 Script
 
 %p
-  Dear Senator 
-  =precede @person.senator_name do
-    \:
+  Dear
+  %span.sen
+    Senator
+    = "#{@person.senator_name}:"
+  %span.rep
+    Representative,
+    = "TODO rep name"
 
 %p
   My name is 
 
   = succeed '. I live at' do
-    %span.bold&== <your name>
+    %span.bold&== [your name]
   = succeed ", and I am calling today to ask for your support for #{BILL}." do
     - if @person.address
       = @person.full_address
     - else
-      %span.bold&== <your address>
+      %span.bold&== [your address]
 
-
-%p
-  = SHORT_BILL
-  are bills that would prohibit discrimination on the basis of sexual orientation in areas such as employment and housing. These bills are important to me because I feel that it is important to end this kind of unfair discrimination.
-
-%p
-  HB 5 passed by a large margin in the House of Representatives, but is stuck in the Senate Executive Committee. Senate Bill 121 has been introduced to a different committee, the Senate Insurance Committee, with the same intent as HB 5. 
-
-%p
-  Please do whatever you can to get either of these bills onto the floor. We have been patiently waiting for 10 years to get this legislation to the senate floor. 
-
-%p
-  Can I count on your support in getting HB 5 and SB 121 out of committee?
+%button.switch Switch to Calling Your Representative
