show the committee senators better

--- a/views/index.haml
+++ b/views/index.haml
@@ -13,16 +13,16 @@
   Three of the members of the committee are sponsors of our Civil Unions bill, so please prioritize contacting the other three members of the committee who are not sponsors and who have not publicly declared their support for the bill:
   %ul
     %li
-      Senator
-      %a{:href => "mailto:Joseph.Booth@state.de.us"} Joseph.Booth@state.de.us
+      Senator Joseph Booth:
+      %a{:href => "mailto:joseph.booth@state.de.us"} joseph.booth@state.de.us
       302-744-4117
     %li
-      Senator
-      %a{:href => "mailto:Dave.Lawson@state.de.us"} Dave.Lawson@state.de.us
+      Senator Dave Lawson:
+      %a{:href => "mailto:dave.lawson@state.de.us"} dave.lawson@state.de.us
       302-492-1511
     %li
-      Senator
-      %a{:href => "mailto:Robert.Marshall@state.de.us"} Robert.Marshall@state.de.us
+      Senator Robert Marshall:
+      %a{:href => "mailto:robert.marshall@state.de.us"} robert.marshall@state.de.us
       302-744-4168
 %p
   In addition, both the State Senator and State Representative for your district need to hear from each registered voter in their district that supports the civil union bill. Please enter your address or 9-digit zip code below to determine who your State Senator and State Representative are.
