--- a/views/index.haml
+++ b/views/index.haml
@@ -88,6 +88,8 @@
     <option value="WI">Wisconsin</option> 
     <option value="WY">Wyoming</option>
     </select>
+  %p
+    %input{:type => "submit", :value => "Continue"}
   .phonenum OR
   %hr{:width => '500px', :style => "margin-left: 0"}
   %p
