--- a/views/layout.haml
+++ b/views/layout.haml
@@ -7,7 +7,7 @@
 <meta name="Copyright" content="Christina Chun" />
 <meta name="Designed By" content="ChristinaChun.com" />
 <meta name="Language" content="English" />
-%title= @title || "Help Delaware Get Civil Unions"
+%title= @title || "Support Civil Unions in Delaware"
 
 <style type="text/css" title="layout" media="screen"> @import url("stylesheets/style.css"); </style>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
@@ -20,7 +20,7 @@
 <div id="Body">
 <div id="Navigation"><div id="SiteHeader"></div>
 <div id="PageHeaderPad">
-<div id="PageHeader"><div class="pad"><h1>Help Delaware Get Civil Unions</h1></div>
+<div id="PageHeader"><div class="pad"><h1>Support Civil Unions in Delaware</h1></div>
 </div>
 </div>
 </div>
