shorter is better

--- a/views/call.haml
+++ b/views/call.haml
@@ -45,7 +45,9 @@
 
   = succeed '. I live at' do
     %span.bold&== [your name]
-  %span.bold&== [your address, including city]
+  %span.bold&== [your address]
+  in
+  %span.bold&== [city]
 
 .sen
   - if @sen_sponsorship
