--- a/views/call.haml
+++ b/views/call.haml
@@ -72,3 +72,5 @@
     Fortunately the majority of Delawareans, like myself, support Civil Unions, and recognize this as a pure equality issue.  For this reason, I strongly encourage you to join your fellow Senators in supporting Senate Bill 30.
 
 %button.switch Switch to Calling Your Representative
+:javascript
+  mpmetrics.track('Load call page');
