--- a/views/index.haml
+++ b/views/index.haml
@@ -100,3 +100,5 @@
     %label 9-digit Zip Code
     %input{:type => "textfield", :name => "zip9", :length => 10, :size => 10}
   %input{:type => "submit", :value => "Continue"}
+:javascript
+  mpmetrics.track('Load homepage');
