--- a/views/layout.haml
+++ b/views/layout.haml
@@ -12,6 +12,8 @@
 <style type="text/css" title="layout" media="screen"> @import url("stylesheets/style.css"); </style>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="/application.js"></script>
+<script type='text/javascript'> var mp_protocol = (('https:' == document.location.protocol) ? 'https://' : 'http://'); document.write(unescape('%3Cscript src="' + mp_protocol + 'api.mixpanel.com/site_media/js/api/mixpanel.js" type="text/javascript"%3E%3C/script%3E')); </script> <script type='text/javascript'> try {  var mpmetrics = new MixpanelLib('511c2b90f0efc0f14970f5cc809771ce'); } catch(err) { null_fn = function () {}; var mpmetrics = {  track: null_fn,  track_funnel: null_fn,  register: null_fn,  register_once: null_fn, register_funnel: null_fn }; } </script>
+
 </head>
 
 <body>
@@ -56,14 +58,4 @@ Copyright &copy; 2009 Daniel Jackoway |  All Rights Reserved.
 <br />
 Template By <a href="http://www.christinachun.com/freestuff.php" title="Christina Chun">Christina Chun</a>  |  <a href="http://validator.w3.org/check?uri=referer">Valid XHTML</a></div>
 </div>
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-8961600-1");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-</body>
 </html>
