mention that it's going to committee Wednesday

--- a/views/index.haml
+++ b/views/index.haml
@@ -8,7 +8,13 @@
   Delaware’s “Civil Union and Equality Act of 2011,” S.B. 30, would allow same-gender couples to have the rights and responsibilities on the state level that accrue to opposite-sex marriage. You can see the bill and its status at
   %a{:href => "http://legis.delaware.gov/LIS/LIS146.nsf/vwLegislation/SB+30?Opendocument"} http://legis.delaware.gov/LIS/LIS146.nsf/vwLegislation/SB+30?Opendocument
 %p
-  The bill is now in the state Senate’s Administrative Services Committee. To continue its progress and ultimately be successful, it must, as the first step, be voted out of that Senate committee, and be allowed to the Senate floor for a vote.
+  The bill is now in the state Senate’s Administrative Services Committee. To continue its progress and ultimately be successful, it must, as the first step, be voted out of that Senate committee, and be allowed to the Senate floor for a vote. It has a hearing date of
+  %span.bold
+    this Wednesday, March 30
+  so please call your state representatives by
+  %span.bold
+    this Tuesday, March 29
+  for maximum impact.
 %p
   Three of the members of the committee are sponsors of our Civil Unions bill, so please prioritize contacting the other three members of the committee who are not sponsors and who have not publicly declared their support for the bill:
   %ul
