--- a/views/index.haml
+++ b/views/index.haml
@@ -16,7 +16,7 @@
     this Tuesday, March 29
   for maximum impact.
 %p
-  Three of the members of the committee are sponsors of our Civil Unions bill, so please prioritize contacting the other three members of the committee who are not sponsors and who have not publicly declared their support for the bill:
+  Three of the members of the committee are sponsors of our Civil Unions bill, so please prioritize contacting the other three members of the committee (listed below) who are not sponsors and who have not publicly declared their support for the bill:
   %ul
     %li
       Senator Joseph Booth:
@@ -31,10 +31,10 @@
       %a{:href => "mailto:robert.marshall@state.de.us"} robert.marshall@state.de.us
       302-744-4168
 %p
-  In addition, both the State Senator and State Representative for your district need to hear from each registered voter in their district that supports the civil union bill. Please enter your address or 9-digit zip code below to determine who your State Senator and State Representative are.
+  In addition, both the State Senator and State Representative for your district need to hear from each registered voter in their district that supports the civil union bill. Please enter your home address or 9-digit zip code below to determine who your State Senator and State Representative are.
 %form{:action => '/call', :method => :post}
   %p
-    %label Address
+    %label Home Address
     %input{:type => 'textfield', :name => "address", :size => 50}
   %p
     %label City
