--- a/views/call.haml
+++ b/views/call.haml
@@ -78,7 +78,7 @@
   - else
     I am calling today to encourage you to support Senate Bill 30, the Civil Union bill.  I know that there is a vocal minority that does not recognize the injustice which same-sex couples face.
     %span.bold
-      [share one sentence about how you yourself or a friend seek equality.]
+      [share one sentence about how you yourself or a friend seeks equality.]
     Fortunately the majority of Delawareans, like myself, support Civil Unions, and recognize this as a pure equality issue.  For this reason, I strongly encourage you to join your fellow Senators in supporting Senate Bill 30.
 
 %button.switch Switch to Contacting Your Representative
