--- a/views/index.haml
+++ b/views/index.haml
@@ -8,30 +8,9 @@
   Delaware’s “Civil Union and Equality Act of 2011,” S.B. 30, would allow same-gender couples to have the rights and responsibilities on the state level that accrue to opposite-sex marriage. You can see the bill and its status at
   %a{:href => "http://legis.delaware.gov/LIS/LIS146.nsf/vwLegislation/SB+30?Opendocument"} http://legis.delaware.gov/LIS/LIS146.nsf/vwLegislation/SB+30?Opendocument
 %p
-  The bill is now in the state Senate’s Administrative Services Committee. To continue its progress and ultimately be successful, it must, as the first step, be voted out of that Senate committee, and be allowed to the Senate floor for a vote. It has a hearing date of
-  %span.bold
-    this Wednesday, March 30
-  so please call your state representatives by
-  %span.bold
-    this Tuesday, March 29
-  for maximum impact.
+  The bill is now up for consideration by the full Senate.
 %p
-  Three of the members of the committee are sponsors of our Civil Unions bill, so please prioritize contacting the other three members of the committee (listed below) who are not sponsors and who have not publicly declared their support for the bill:
-  %ul
-    %li
-      Senator Joseph Booth:
-      %a{:href => "mailto:joseph.booth@state.de.us"} joseph.booth@state.de.us
-      302-744-4117
-    %li
-      Senator Dave Lawson:
-      %a{:href => "mailto:dave.lawson@state.de.us"} dave.lawson@state.de.us
-      302-492-1511
-    %li
-      Senator Robert Marshall:
-      %a{:href => "mailto:robert.marshall@state.de.us"} robert.marshall@state.de.us
-      302-744-4168
-%p
-  In addition, both the State Senator and State Representative for your district need to hear from each registered voter in their district that supports the civil union bill. Please enter your home address or 9-digit zip code below to determine who your State Senator and State Representative are.
+  Both the State Senator and State Representative for your district need to hear from each registered voter in their district that supports the civil union bill. Please enter your home address or 9-digit zip code below to determine who your State Senator and State Representative are.
 %form{:action => '/call', :method => :post}
   %p
     %label Home Address
