--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1" />
-<meta name="Description" content="Helping Delaware residents call their state senators in support of Delaware House Bill 5, a bill that would ban discrimination based on sexual orientation" />
+<meta name="Description" content="Helping Delaware residents call their state senators in support of Delaware Senate Bill 30, a bill that would establish same-sex civil unions." />
 <meta name="Keywords" content="open source web design, christina chun, christinachun.com, www.christinachun.com" />
 <meta name="Copyright" content="Christina Chun" />
 <meta name="Designed By" content="ChristinaChun.com" />
