passed the Senate, so only ask them to call their rep

--- a/views/index.haml
+++ b/views/index.haml
@@ -8,9 +8,9 @@
   Delaware’s “Civil Union and Equality Act of 2011,” S.B. 30, would allow same-gender couples to have the rights and responsibilities on the state level that accrue to opposite-sex marriage. You can see the bill and its status at
   %a{:href => "http://legis.delaware.gov/LIS/LIS146.nsf/vwLegislation/SB+30?Opendocument"} http://legis.delaware.gov/LIS/LIS146.nsf/vwLegislation/SB+30?Opendocument
 %p
-  The bill is now up for consideration by the full Senate.
+  The bill has passed the Senate and will soon be considered by the House.
 %p
-  Both the State Senator and State Representative for your district need to hear from each registered voter in their district that supports the civil union bill. Please enter your home address or 9-digit zip code below to determine who your State Senator and State Representative are.
+  The State Representative for your district need to hear from each registered voter in their district that supports the civil union bill. Please enter your home address or 9-digit zip code below to determine who your State Senator and State Representative are.
 %form{:action => '/call', :method => :post}
   %p
     %label Home Address
